--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ title-slide-attributes:
   data-background-image: "drawing.png"
   data-background-opacity: "0.3"
 subtitle: <green>Fall Workshop on Computational Geometry, 2025</green>
-author: "<b>Sushovan Majhi</b>, *George Washington University, DC*"
+author: "<b>Sushovan Majhi</b>, *George Washington University, DC*<br/> <green>Joint work</green> with Atish Mitra & Rafal Komendarczyk"
 fig-cap-location: bottom
 callout-icon: false
 format: 
@@ -21,9 +21,24 @@ editor:
 html-math-method: mathml
 ---
 
-# The <red>Problem</red> of <green>Graph Reconstruction</green> {background-image="drawing.png" background-opacity="0.3"}
+## Shape Reconstruction {.smaller}
 
-## The Talk in a Nutshell {style="font-size: 0.7em"}
+- <green>**Shape**</green>: A *Shape* is modeled as a metric space
+  - <gray>Abstract & Euclidean Riemannian manifolds</gray> [@MajhiLatschev]
+  - <gray>general metric *curvature* spaces</gray> [@2406.04259]
+  - <gray>abstract metric graphs</gray> [@Majhi2023]
+  - *embedded* metric graph ($\mathcal G\subset\mathbb R^N$)
+
+- <green>**Sample**</green>: A *finite* $\mathcal S\subset\mathbb R^N$ with small <green>Hausdorff</green> distance $d_{\mathrm H}(\mathcal G, \mathcal S)$
+   
+- <green>**Goal**</green>: Infer the topology of $\mathcal G$ from $\mathcal S$.
+    - <gray>Estimate only the Betti numbers---number of connected components, cycles, voids, etc---of $\mathcal G$</gray>
+
+    - <green>construct</green> a topological space $\hat{\mathcal G}$ (e.g. Vietoris--Rips) from $\mathcal S$ so that
+      - $\hat{\mathcal G}$ is homotopy equivalent to $\mathcal G$ (<green>topological</green> reconstruction)
+      - $\hat{\mathcal G}\subset\mathbb R^N$ and $d_{\mathrm H}(\hat{\mathcal G}, \mathcal S)$ small (<green>geometric</green> reconstruction)
+  
+## The Vietoris--Rips Complex {.smaller}
 
 ```{ojs}
 //| panel: sidebar
@@ -229,37 +244,6 @@ drawRips = function (svg, simplices) {
   return svg;
 }
 ```
-
-
-## Practical Motivation
-![<gray>GPS locations around Berlin</gray>](berlin.jpg)
-
-<red>Q</red>: How to draw the map of the city from a <red>noisy</red> point-cloud of <green>GPS locations</green>?
-
-## 
-![<gray>Source: mapconstruction.org</gray>](mahmuda.jpg)
-
-<green>A</green>: A possible reconstruction of Berlin [@10.5555/2878633]
-
-## Reconstruction Goals {.smaller}
-
-- <green>**Shape**</green>: A *Shape* is modeled as a metric space
-  - <gray>Abstract & Euclidean Riemannian manifolds</gray> [@MajhiLatschev]
-  - <gray>general metric *curvature* spaces</gray> [@2406.04259]
-  - <gray>abstract metric graphs</gray> [@Majhi2023]
-  - *embedded* metric graph ($\mathcal G\subset\mathbb R^N$)
-
-- <green>**Sample**</green>: A *finite* $\mathcal S\subset\mathbb R^N$ with small <green>Hausdorff</green> distance $d_{\mathrm H}(\mathcal G, \mathcal S)$
-   
-- <green>**Goal**</green>: Infer the topology of $\mathcal G$ from $\mathcal S$.
-    - <gray>Estimate only the Betti numbers---number of connected components, cycles, voids, etc---of $\mathcal G$</gray>
-
-    - <green>construct</green> a topological space $\hat{\mathcal G}$ (e.g. Vietoris--Rips) from $\mathcal S$ so that
-      - $\hat{\mathcal G}$ is homotopy equivalent to $\mathcal G$ (<green>topological</green> reconstruction)
-      - $\hat{\mathcal G}\subset\mathbb R^N$ and $d_{\mathrm H}(\hat{\mathcal G}, \mathcal S)$ small (<green>geometric</green> reconstruction)
-  
-
-# <green>Topological</green> Reconstruction {background-image="drawing.png" background-opacity="0.3"}
 
 ## The Vietoris--Rips Complex {.smaller}
 
